--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "pearjs": "^1.0.0",
+    "peerjs": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
